fix: enhance form input styling with consistent border for improved visibility

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -92,6 +92,10 @@ td {
   margin-bottom: 15px;
 }
 
+.form input, .form textarea, .form select {
+  border: 1px solid var(--font-green)
+}
+
 .container-search input {
   border-radius: 50px 0 0 50px;
   width: 300px;
